--- a/style_product.css
+++ b/style_product.css
@@ -1,4 +1,4 @@
-// added by Jianjia Zhang for product page 
+// added by Jianjia Zhang for product page
 *{
   margin: 0;
   padding: 0;
@@ -17,15 +17,19 @@ nav{
   flex: 1;
   text-align: right;
 }
-  
+
 
 nav ul{
   display: inline-block;
+
   list-style-type: none;
 }
 nav ul li{
   display: inline-block;
   margin-right: 30px;
+}
+ul li a:hover {
+  color:red;
 }
 
 a{
@@ -78,7 +82,7 @@ p{
   color: #fff;
   padding: 8px 30px;
   margin: 30px 0;
-  border-radius: 20px; 
+  border-radius: 20px;
   border-radius: 20px;
   transition: background 0.3s;
 }
@@ -94,13 +98,13 @@ p{
 
 
 
-.dropdown {
-  float: left;
+/* .dropdown {
+  float: right;
   overflow: hidden;
 }
 
 .dropdown .dropbtn {
-  font-size: 16px;  
+  font-size: 16px;
   border: none;
   outline: none;
   padding: 14px 16px;
@@ -134,6 +138,60 @@ p{
 .dropdown:hover .dropdown-content {
   display: block;
 }
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  float: right;
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd;}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {background-color: #3234ad;}
+
+.dropdown .dropbtn {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+
+.dropbtn {
+  background-color: #d16500;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+} */
+
 
 .navbar .search-container {
   float: right;
@@ -248,7 +306,7 @@ h4{
   background: #d16500;
   padding: 8px 0px;
   margin: 10px 0;
-  border-radius: 15px; 
+  border-radius: 15px;
   transition: background 0.3s;
 }
 
@@ -270,7 +328,7 @@ h4{
   align-items: center;
   padding: 8px 0px;
   margin: 10px 0;
-  border-radius: 15px; 
+  border-radius: 15px;
   transition: background 0.3s;
 }
 
@@ -329,12 +387,12 @@ h4{
     flex-direction: column;
     margin-top: 60px;
   }
- 
+
   .left-column,
   .right-column {
     width: 100%;
   }
- 
+
   .left-column img {
     width: 300px;
     right: 0;
@@ -342,11 +400,10 @@ h4{
     left: initial;
   }
 }
- 
+
 @media (max-width: 535px) {
   .left-column img {
     width: 220px;
     top: -85px;
   }
 }
-
